[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "streamlit>=1.45.1",
]
